fix slide values, z-index whatIsExokit behind hero

--- a/style/index.css
+++ b/style/index.css
@@ -23,6 +23,7 @@
 }
 
 .home .whatIsExokit{
+    z-index: -4;
     position: relative;
     margin-top: -80px;
     min-height: 350vh;
